didnt work on mobile. fixed

--- a/styles.css
+++ b/styles.css
@@ -121,12 +121,8 @@ h1 {
     font-size: 5rem;
 }
 
-@media screen and (max-width: 700px) {  
+@media only screen and (max-width: 700px) {  
     .quiz {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         gap: 100px;
         height: 50%;
         width: 80%;
@@ -140,12 +136,4 @@ h1 {
         font-size: 1.5rem;
         width: 90%;
     }    
-    .reload {
-        font-size: 1.5rem;
-        position: absolute;
-        word-spacing: 3px;
-        margin-top: 50px;
-        cursor: pointer;
-    
-    }
 }
